--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ nav{
     padding-left: 10px;
     font-size: 25px;
     font-weight: bold;
-    color: #00ffb7;
+    color: #40ebc7;
 }
 .nav-right img{
     width: 25px;
